k8s/microservices-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - http:
        paths:
          - path: /food-court(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pp-food-court-service
                port:
                  number: 8080
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8082
          - path: /traceability(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: traceability-service
                port:
                  number: 8083
